examples/test/testpolicy8974.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8974
  namespace: namespace210
spec:
  podSelector:
    matchLabels:
      key17: value34
      key23: value23
      key48: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value32
          key42: value36
      podSelector:
        matchLabels:
          key41: value4
          key39: value27
          key8: value10
